--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+# PPAP
+public/css/index.css
+public/js/index.js
+
 # Logs
 logs
 *.log
@@ -35,3 +39,12 @@ jspm_packages
 
 # Optional REPL history
 .node_repl_history
+
+
+# Created by https://www.gitignore.io/api/sass
+
+### Sass ###
+.sass-cache/
+*.css.map
+
+# End of https://www.gitignore.io/api/sass
