--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
   "author": "ppap",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.17.1",
     "debug": "^2.6.3",
     "express": "^4.15.2",
     "jquery": "^3.2.1",
